# synapse-token-authenticator

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py  token_authenticator.py
.github/: dependabot.yml
.github/workflows/: python.yml
synapse_token_authenticator/: __init__.py  auth_headers.py  claims_validator.py  config.py  config_classes.py  rest.py  token_authenticator.py  types.py  utils.py
tests/: __init__.py  server.py  synapse_clock.py  test_epa.py  test_jwt.py  test_oauth.py  test_oidc.py  test_simple.py  test_sta_utils.py  test_validators.py  unittest.py
tests/test_utils/: __init__.py
token_authenticator/: __init__.py  token_authenticator.py
