[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-token-authenticator"
description = 'Synapse authentication module which allows for authenticating and registering using JWTs'
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
keywords = []
authors = [
  { name = "Sorunome", email = "mail@sorunome.de" },
  { name = "Amanda Graven", email = "amanda@graven.dev" },
  { name = "Jan Christian Grünhage", email = "jan.christian@gruenhage.xyz" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jwcrypto",
  "twisted",
]
version = "0.13.0"

[project.urls]
Documentation = "https://github.com/famedly/synapse-token-authenticator"
Issues = "https://github.com/famedly/synapse-token-authenticator/issues"
Source = "https://github.com/famedly/synapse-token-authenticator"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "pytest",
  "pytest-cov",
  "mock",
  "matrix-synapse",
  "ruff",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=synapse_token_authenticator --cov=tests {args}"
format = "black ."
lint = "ruff check ."

[tool.hatch.envs.ci.scripts]
cov = "pytest --cov-report=lcov:lcov.info --cov-config=pyproject.toml --cov=synapse_token_authenticator --cov=tests"

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.hatch.envs.hatch-static-analysis]
dependencies = [
  "black",
  "isort",
  "ruff",
  "mypy",
  "mypy-zope",
  "pydantic",
  "mypy-zope",
  "types-PyYAML",
  "types-bleach",
  "types-cachetools",
  "types-requests",
  "types-pyOpenSSL"
]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
  "isort . --check --diff",
  "black . --check --diff"
]
format-fix = [
  "isort .",
  "black ."
]
lint-check = [
  "mypy",
  "ruff check"
]
lint-fix = [
  "mypy",
  "ruff check --fix"
]
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
install_types = true
plugins = [
  "pydantic.mypy",
  "mypy_zope:plugin"
]
files = ["synapse_token_authenticator", "tests"]

[tool.isort]
profile = "black"
src_paths = ["synapse_token_authenticator", "tests"]

[tool.black]
target-version=["py313"]
