[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-token-authenticator"
description = 'Synapse authentication module which allows for authenticating and registering using JWTs'
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
keywords = []
authors = [
  { name = "Sorunome", email = "mail@sorunome.de" },
  { name = "Amanda Graven", email = "amanda@graven.dev" },
  { name = "Jan Christian Grünhage", email = "jan.christian@gruenhage.xyz" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jwcrypto<=1.5.6",
  "twisted",
]
version = "0.13.1"

[project.urls]
Documentation = "https://github.com/famedly/synapse-token-authenticator"
Issues = "https://github.com/famedly/synapse-token-authenticator/issues"
Source = "https://github.com/famedly/synapse-token-authenticator"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "pytest",
  "pytest-cov",
  "mock",
  "matrix-synapse",
  "ruff",
  "mypy",
  "mypy-zope",
  "types-PyYAML",
  "types-bleach",
  "types-cachetools",
  "types-requests",
  "types-pyOpenSSL"
]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.hatch.envs.hatch-static-analysis]
dependencies = [
  "black",
  "isort",
  "ruff",
  "mypy",
  "mypy-zope",
  "types-PyYAML",
  "types-bleach",
  "types-cachetools",
  "types-jwcrypto",
  "types-requests",
  "types-pyOpenSSL"
]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
  "isort . --check --diff",
  "black . --check --diff"
]
format-fix = [
  "isort .",
  "black ."
]
lint-check = [
  "mypy",
  "ruff check"
]
lint-fix = [
  "mypy",
  "ruff check --fix"
]
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
install_types = true
plugins = [
  "mypy_zope:plugin"
]
files = ["synapse_token_authenticator", "tests"]

[tool.isort]
profile = "black"
src_paths = ["synapse_token_authenticator", "tests"]

[tool.hatch.envs.hatch-test]
# The Hatch test environment includes the default pytest, mock and coverage
# dependencies. If you should need additional, use the 'extra-dependencies' section
# below.
extra-dependencies = [
  "pytest-cov",
  "matrix-synapse",
]
extra-args = [
  # use the loadscope dist method when running tests parallel. This keeps grouped tests
  # together instead of splitting them up, which tends to get "stuck" and not finish
  # the testing(have to use ^C to exit). Has no effect when tests are not parallelized.
  "--dist=loadscope"
]

# The 'hatch test ...' command has the built-in scripts that define its invocation.
# Override these scripts so coverage works as expected.
#
# In particular, the 'coverage run -m pytest ...' command does not work correctly.
# In CI, it was not producing the subprocess-enabled coverage files, even though it
# worked locally (there should have been 4 files, but only 1 was produced, and it had
# no data). Using the pytest-cov plugin does seem to produce these files, and the
# missing-lines display format is also correct. Since it handles the internal
# combine/report commands, set those scripts below to do nothing (or CI will report
# fake errors).
[tool.hatch.envs.hatch-test.scripts]
# The HATCH_TEST_ARGS environment variable is how the `test` command's flags are
# translated and internally populated without affecting the user's arguments. This is
# also the way that "extra arguments" are passed. Leave it there
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
# The original 'run-cov' is below; this is overridden to produce coverage properly.
#run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
# Notes for this command line: using --cov=synapse_token_authenticator instead of having
# that directory in the 'coverage.run' config above actually produces the correct
# coverage files (the ones that were missing, as mentioned above). The 'cov-report'
# options both produce useful output (one for the codecov file and the other displays
# the missing coverage lines).
run-cov = "pytest{env:HATCH_TEST_ARGS:} --cov=synapse_token_authenticator --cov-report=lcov:lcov.info --cov-report=term-missing --cov-config=pyproject.toml {args}"

# As mentioned above, the defaults for these scripts are commented out as they will
# produce fake errors in CI. They attempt to run but the result of those commands
# already exists. This raises error codes and fails the test.
#cov-combine = "coverage combine"
#cov-report = "coverage report"
cov-combine = ""
cov-report = ""
